Fix for menu on smaller screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -197,3 +197,7 @@ div {
     margin:0;
   }
 }
+
+.navbar-collapse.in{
+  overflow-y: visible;
+}
